# osinfo

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  matcher.rs  os_info.rs  version.rs
src/linux/: mod.rs  os_release.rs
src/windows/: api.rs  mod.rs
